--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 }
 
 html {
-  background: black url(/img/background.png) left top no-repeat;
+  background: black url(img/image2.png) left top no-repeat;  ///img/background.png
   background-size: cover;
   min-height: 100%;
 }
