--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,8 @@
 html {
   background: black url(/img/background.png) left top no-repeat;  ///img/background.png
   background-size: cover;
-  min-height: 100%;
+  min-height: 300%;
+  min-width: 400%;
 }
 
 .page-wrap {
@@ -153,6 +154,10 @@ html {
 }
 
 .update > .name {
+  padding: 10px;
+  flex: 1;
+}
+.update > .branch {
   padding: 10px;
   flex: 1;
 }
