--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,22 +37,22 @@ html {
   background: white;
   color: black;
   text-decoration: none;
-  padding: 5px;
+  padding: 10px;
   border-radius: 5px;
   margin-left: 5px;
 }
 
 .page-button.active {
-  background: #818181;
-  color: white;
-  border: 1px white solid;
+  background: #78cdff;
+  color: rgb(0, 0, 0);
+  border: 1px rgb(12, 253, 3) solid;
 }
 
 .mlh-logo {
   background: url("/img/mlh-logo-white.svg") no-repeat;
   background-size: contain;
-  width: 200px;
-  height: 100px
+  width: 100px;
+  height: 50px
 }
 
 .azure-logo {
